--- a/style.css
+++ b/style.css
@@ -1,2 +1,109 @@
 
+html {
+    box-sizing: border-box;
+    font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
+}
 
+body {
+    display: flex;
+    justify-content: center;
+}
+
+.container {
+    display: flex;
+    height: fit-content;
+    width: fit-content;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(31 41 55/1);
+    border-radius: 0.5rem;
+    padding: 1.5rem;
+    font-size: 2.24rem;
+    line-height: 1.77rem;
+    color: rgb(209 213 219/1);
+}
+
+.buttons {
+    display: flex;
+}
+
+#display {
+    height: 50px;
+    border-color: rgb(124 89 32/1);
+    border: solid 2px;
+    align-self: stretch;
+    text-align: right;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+}
+
+.first-column {}
+
+.place-holder {
+    display: flex;
+    justify-content: space-between;
+}
+
+.holder {
+    padding: 1.12rem;
+    margin: 0.34rem;
+}
+
+/* column > row > number */
+.first-row {
+    display: flex;
+}
+            
+.number {
+    padding: 1.12rem;
+    margin: 0.34rem;
+}
+
+#seven7 {}
+#eight {}
+#nine {}
+
+.second-row {
+    display: flex;
+    justify-content: space-between;
+}
+
+#four {}
+#five {}
+#six {}
+
+.third-row {
+    display: flex;
+    justify-content: space-between;
+}
+
+#one {}
+#two {}
+#trhee {}
+ 
+.fourth-row {
+    display: flex;
+    justify-content: space-between;
+}
+
+#zero {}
+#point {}
+#equals {} 
+
+/* second-column > operators > operator */
+.second-column {}
+
+#operators {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.operator {}
+
+#clear {}
+#div {}
+#mul {}
+#sub {}
+#add {}
